--- a/public/index.html
+++ b/public/index.html
@@ -60,11 +60,11 @@
 				<button class='btn4 btn-xs btn-info' style = ' border-radius: 10px; background-color: hsla(200, 100%, 50%, 0.5);'>A. Python, Ruby, PHP</button>
 				<br>
 
-				<button class='btn5 btn-xs btn-info' style = ' border-radius: 10px; background-color: hsla(200, 100%, 50%, 0.5);'>A. CSS, HTML, Javascript</button>
+				<button class='btn5 btn-xs btn-info' style = ' border-radius: 10px; background-color: hsla(200, 100%, 50%, 0.5);'>B. CSS, HTML, Javascript</button>
 				<br>
 
-        <button class='btn6 btn-xs btn-info' style = ' border-radius: 10px; background-color: hsla(200, 100%, 50%, 0.5);'>A. Python, HTML, PHP</button>
-				<</div>
+        <button class='btn6 btn-xs btn-info' style = ' border-radius: 10px; background-color: hsla(200, 100%, 50%, 0.5);'>C. Python, HTML, PHP</button>
+				</div>
 
 			<div>
 				<p><strong>3. Which of these are programming Languages?</strong></p>
